HTML for homepage and blacklist

--- a/popup.html
+++ b/popup.html
@@ -7,8 +7,36 @@
   <script src="popup.js"></script>
 </head>
 <body>
-  <button type="button"> Click Me!!</button>
+  <!--button type="button"> Click Me!!</button>
   <div id="status"></div>
-  <img id="image-result" hidden>
+  <img id="image-result" hidden -->
+  <!--Garden Area-->
+  <img src="placeholderg.jpeg"></img>
+  <HR>
+ <!--Slider Control-->
+ <br>
+ <br>
+    <div data-role="main" class="ui-content">
+        <form method="post" action="demoform.asp">
+          <label for="workload">Workload:</label>
+          <input type="range" name="workload" id="workload" value="50" min="0" max="100">
+        </form>
+
+    <!--Buttons-->
+    <br>
+    <br>
+    <!-- <div style="float:center">
+      <a href="store.html">
+        <button type="button">Store</button>
+      </a>
+    </div> -->
+    <div style="float:left">
+      <button type="submit">Study</button>
+    </div>
+    <div style="float:right">
+      <a href="blacklist.html">
+        <button type="button">Blacklist</button>
+      </a>
+    </div>
 </body>
 </html>
