--- a/blacklist.html
+++ b/blacklist.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
-<!-- This page is shown when the extension button is clicked -->
+<!-- This page is shown when the extension button is clicked-->
 <html hola_ext_inject = "disabled">
+<html ng-app>
 <head>
-  <title>Getting Started Extension Popup</title>
-  <style>
-      body{
-        font-family: "Segoe UI", "Lucinda Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status{
-        /*avoid an excessivley wide status text*/
-        white-: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
-  </style>
-  <script src="popup.js"></script>
-  <style type="text/css"></style>
+  <link rel="stylesheet" type="text/css" href="ladybug.css" media="screen" />
+  <script type="text/javascript">
+    function URLController($scope){
+        $scope.sites=[];
+        $scope.addSite=function(){
+            $scope.sites.push($scope.newSite);
+        }
+    }
+</script>
 </head>
 <body>
-  <div id="status"></div>
-  <img id="image-result" hidden>
+
+  <!--Blacklist list--><!--Submit links for blacklist here-->
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
+  <div ng-controller="URLController">
+     <input type="text" ng-model="newSite">
+     <button ng-click="addSite()">Submit</button>
+
+      <hr/>
+      List of Blacklisted Sites :
+      <ul><li ng-repeat="site in sites">{{site}}</li></ul>
+  </div>
+
+<br>
+<br>
+  <div style="float:right">
+  <a href="popup.html">
+    <button type="button">Home</button>
+  </a>
+</div>
 </body>
 </html>
+
+
+<!-- <!doctype html>
+<html ng-app>
+<head>
+<script type="text/javascript">
+    function URLController($scope){
+        $scope.sites=[];
+        $scope.addSite=function(){
+            $scope.sites.push($scope.newSite);
+        }
+    }
+</script>
+</head>
+<body>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
+<div ng-controller="URLController">
+   <input type="text" ng-model="newSite">
+   <button ng-click="addSite()">Submit</button>
+
+    <hr/>
+    List of Blacklisted Sites :
+    <ul><li ng-repeat="site in sites">{{site}}</li></ul>
+</div>
+</body> -->
