--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <!-- This page is shown when the extension button is clicked -->
 <html hola_ext_inject = "disabled">
 <head>
-  <link rel="stylesheet" type="text/css" href="ladybug.css" media="screen" />
+  <link rel="stylesheet" type="text/css" href="css/ladybug.css" media="screen" />
   <title>Getting Started Extension Popup</title>
   <script src="popup.js"></script>
 </head>
@@ -11,7 +11,7 @@
   <div id="status"></div>
   <img id="image-result" hidden -->
   <!--Garden Area-->
-  <img src="placeholderg.jpeg"></img>
+  <img src="images/placeholderg.jpeg"></img>
   <HR>
  <!--Slider Control-->
  <br>
@@ -34,7 +34,7 @@
       <button type="submit">Study</button>
     </div>
     <div style="float:right">
-      <a href="blacklist.html">
+      <a href="html/blacklist.html">
         <button type="button">Blacklist</button>
       </a>
     </div>
