--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,8 @@
           <input type="range" name="workload" id="workload" value="50" min="0" max="100">
         </form>
 
+   <!--Timer-->
+   
     <!--Buttons-->
     <br>
     <br>
